# VIDSUM

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.claude/: CLAUDE.md  settings.local.json
chat-logs-sanitized/: 2026-04-23-1503-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-23-1629-superpowersexecuting-plan-worktreesinput.txt  2026-04-23-1805-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-23-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-24-0051-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-24-0236-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-24-1508-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-25-0103-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-26-0336-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-26-1706-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-26-1804-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-27-1609-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-27-1828-superpowersexecuting-plan-docssuperpowers.txt  2026-04-28-1635-docssuperpowersplans2026-04-27-subtitle-previe.txt  2026-04-28-1911-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-28-2006-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-28-2056-caveat-the-messages-below-were-generated-by-the-u.txt  2026-04-29-0028-caveat-the-messages-below-were-generated-by-the-u.txt  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/asr/: cloud_asr.rs  mod.rs  whisper_engine.rs
src-tauri/src/commands/: asr.rs  file.rs  llm.rs  mod.rs  subtitle.rs
src-tauri/src/llm/: client.rs  config.rs  mod.rs  prompt.rs
src-tauri/src/subtitle/: mod.rs  parser.rs
(+24 files in other folders)
