[package]
name = "vidsum"
version = "0.1.0"
description = "音视频转写总结工具"
authors = ["VidSum Team"]
edition = "2021"

[lib]
name = "vidsum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
