[package]
name = "vidsum"
version = "0.1.0"
description = "音视频转写总结工具"
authors = ["VidSum Team"]
edition = "2021"

[lib]
name = "vidsum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ASR 相关依赖
whisper-rs = "0.16.0"
symphonia = { version = "0.5.4", features = ["mp3", "aac", "isomp4"] }
reqwest = { version = "0.13.2", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
